--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,5 +1,4 @@
-trigger:
-- main
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -27,11 +26,8 @@ jobs:
 
   - task: SSH@0
     inputs:
-      host: '20.0.8.103'
-      port: '22'
-      username: 'sandip'
-      password: 'admin@1997#'
-      scriptType: 'bash'
+      sshEndpoint: 'azurevm'  # Replace with the name of your SSH service connection
+      runOptions: 'inline'
       scriptInline: |
         sudo rm -rf /var/www/html/*
         sudo cp -r $(System.DefaultWorkingDirectory)/publishedWebsite/* /var/www/html/
