Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,5 +1,4 @@
-trigger:
-- main
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -7,24 +6,17 @@ pool:
 jobs:
 - job: DeployToAzureVM
   steps:
-  - checkout: self
-    submodules: true
-
-  - task: UseDotNet@2
-    inputs:
-      packageType: 'sdk'
-      version: '3.1.x'
-      installationPath: $(Agent.ToolsDirectory)/dotnet
-
   - script: |
-      dotnet publish -c Release -o $(Build.ArtifactStagingDirectory)/publish
-    displayName: 'Publish HTML project'
+      sudo apt-get update
+      sudo apt-get install -y apache2
+    displayName: 'Install Apache'
 
   - task: CopyFiles@2
     inputs:
-      SourceFolder: '$(Build.ArtifactStagingDirectory)/publish'
+      SourceFolder: '$(Build.SourcesDirectory)'
       Contents: '**'
       TargetFolder: '$(Build.ArtifactStagingDirectory)/publish'
+    displayName: 'Copy HTML files'
 
   - task: PublishBuildArtifacts@1
     inputs:
@@ -32,35 +24,12 @@ jobs:
       artifactName: 'publishedWebsite'
       publishLocation: 'Container'
 
-  - task: DownloadSecureFile@1
-    name: sshKey
-    displayName: 'Download SSH private key'
-    inputs:
-      secureFile: 'your-ssh-key'
-
   - task: SSH@0
     inputs:
-      host: '20.0.8.103'
-      port: '22'
-      username: 'sandip'
-      password: 'sandip@1997#'
-      scriptType: 'bash'
+      sshEndpoint: 'azurevm'  # Replace with the name of your SSH service connection
+      runOptions: 'inline'
       scriptInline: |
-        # Install Apache (if not already installed)
-        sudo apt-get update
-        sudo apt-get install -y apache2
-
-        # Start Apache
-        sudo systemctl start apache2
-
-        # Enable Apache to start on boot
-        sudo systemctl enable apache2
-
-        # Clone the GitHub repository (replace with your repository URL)
-        git clone https://github.com/mukherjeecloudsyzmil/psohtml.git
-
-        # Copy HTML files to the default Apache web directory
-        sudo cp -r your-repository/* /var/www/html/
-
-        # Restart Apache to apply changes
+        sudo rm -rf /var/www/html/*
+        sudo cp -r $(System.DefaultWorkingDirectory)/publishedWebsite/* /var/www/html/
         sudo systemctl restart apache2
+    displayName: 'Deploy to Azure VM'
